<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/addBookTitleHint"
    android:background="@color/colorPrimaryBackground"
    android:backgroundTint="#14FFFFFF"
    android:backgroundTintMode="add"
    tools:context=".addBook">

    <EditText
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/addBookTitle"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|textCapWords|textCapCharacters"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryFaded"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/addBookAuthor"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimaryFaded"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle" />

    <EditText
        android:id="@+id/bookNotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/addBookNotes"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textAutoCorrect|textMultiLine"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTertiary"
        android:textColorHint="@color/colorTertiary"
        app:layout_constraintBottom_toTopOf="@+id/saveBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDateFinished" />

    <EditText
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="8"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:textAlignment="viewStart"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:textCursorDrawable="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addBookCurrentPageText"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor" />

    <EditText
        android:id="@+id/cardDateStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="8"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textAlignment="viewStart"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        android:textColorLink="@color/colorSecondary"
        android:textCursorDrawable="@color/colorTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addBookDateStartedText"
        app:layout_constraintTop_toBottomOf="@+id/page" />

    <EditText
        android:id="@+id/cardDateFinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="8"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textAlignment="viewStart"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addBookDateFinishedText"
        app:layout_constraintTop_toBottomOf="@+id/cardDateStarted" />

    <Button
        android:id="@+id/saveBook"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#0DFFFFFF"
        android:elevation="8dp"
        android:fadingEdge="none"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:focusedByDefault="false"
        android:selectAllOnFocus="false"
        android:text="@string/saveBTN"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addBookDateStartedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="6"
        android:text="@string/addDateStarted"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookCurrentPageText" />

    <TextView
        android:id="@+id/addBookDateFinishedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="6"
        android:text="@string/addDateFinished"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookDateStartedText" />

    <TextView
        android:id="@+id/addBookCurrentPageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="6"
        android:text="@string/currentPage"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor" />

</androidx.constraintlayout.widget.ConstraintLayout>