<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cardBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cardBackground"
        android:layout_alignTop="@+id/cardBackground"
        android:layout_alignEnd="@+id/cardBackground"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:elevation="8dp"
        android:shadowColor="#0A352F"
        android:text="@string/cardBookTitle"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cardBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardBookTitle"
        android:layout_alignStart="@+id/cardBackground"
        android:layout_alignEnd="@+id/cardBackground"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:elevation="8dp"
        android:text="@string/cardBookAuthor"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/DateStartedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardBookAuthor"
        android:layout_alignStart="@+id/cardBackground"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/dateStarted"
        android:textColor="@color/colorSecondary" />

    <TextView
        android:id="@+id/dateFinishedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DateStartedText"
        android:layout_alignStart="@+id/cardBackground"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/dateFinished"
        android:textColor="@color/colorSecondary" />

    <TextView
        android:id="@+id/dateStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardBookAuthor"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:layout_toEndOf="@+id/DateStartedText"
        android:textColor="@color/colorSecondary"/>

    <TextView
        android:id="@+id/dateFinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateStarted"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:layout_toEndOf="@+id/dateFinishedText"
        android:textColor="@color/colorSecondary"/>

    <TextView
        android:id="@+id/cardBookNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateFinishedText"
        android:layout_alignStart="@+id/cardBackground"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/cardBookNotes"
        android:textColor="@color/colorTertiary" />

    <View
        android:id="@+id/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:background="@color/colorTertiaryBackground"
        android:elevation="3dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editEntryFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cardBackground"
        android:layout_alignBottom="@+id/cardBackground"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:elevation="8dp"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</RelativeLayout>