<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="1dp"
    android:focusable="auto"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:scrollbars="none"
    android:visibility="visible"
    tools:visibility="visible">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignBottom="@+id/cardBookNotes"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-16dp"
        android:background="#0DFFFFFF"
        android:elevation="0dp" />

    <TextView
        android:id="@+id/cardBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:text="@string/cardBookTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cardBookNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardBookAuthor"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:text="@string/cardBookNotes"
        android:textColor="@color/colorTertiary"
        android:textColorHint="#00FFFFFF" />

    <TextView
        android:id="@+id/cardBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardBookTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:text="@string/cardBookAuthor"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardBookTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:elevation="2dp"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp" />

</RelativeLayout>